--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>ET Club</title>
+    <title>ETConnect</title>
     <link rel="icon" href="%PUBLIC_URL%/noTextLogo.png" type="image/png">
   </head>
   <body>
